fix: handle overflow of long stream names in Sync Catalog table (#17679)

--- a/airbyte-webapp/src/components/connection/SyncCatalogTable/components/cells/StreamNameCell.module.scss
+++ b/airbyte-webapp/src/components/connection/SyncCatalogTable/components/cells/StreamNameCell.module.scss
@@ -2,6 +2,11 @@
   opacity: 0.5;
 }
 
+.streamNameContainer {
+  min-width: 0;
+  flex: 1;
+}
+
 .tooltip {
   max-width: 250px;
 }
